--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "postcss-import": "^15.1.0"
   }
 }
